# devops-engineer-from-scratch-project-49

./: Makefile  README.md  pyproject.toml
brain_games/: engine.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_even.py  brain_prime.py
