[project]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = [
    { name = "Your Name", email = "your@email.com" },
]
dependencies = []
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
